force-app/main/default/objects/Case/fields/Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Person/Dept Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>