force-app/main/default/objects/Case/fields/Persona_IQ_Complaint_or_RMA__c.field-meta.xml
<CustomField>
    <fullName>Persona_IQ_Complaint_or_RMA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Persona IQ Complaint # or RMA #</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>