force-app/main/default/objects/Case/fields/Phone_Contact__c.field-meta.xml
<CustomField>
    <fullName>Phone_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to find contact from Phone.</description>
    <label>Contact Phone Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>