force-app/main/default/objects/Case/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>