force-app/main/default/objects/Case/fields/Priority_Date__c.field-meta.xml
<CustomField>
    <fullName>Priority_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Priority Date</label>
    <type>Date</type>
</CustomField>