force-app/main/default/objects/Case/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <label>Product Sub-Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anatomical Fracture Shoulder System</fullName>
            </value>
            <value>
                <fullName>Anatomical Inverse/Reverse Shoulder</fullName>
            </value>
            <value>
                <fullName>Anatomical Shoulder System</fullName>
            </value>
            <value>
                <fullName>Articular Surface Implants</fullName>
            </value>
            <value>
                <fullName>Augments, Bone Screws &amp; Stem Extensions</fullName>
            </value>
            <value>
                <fullName>Bigliani/Flatow Shoulder</fullName>
            </value>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>Bipolar Cups</fullName>
            </value>
            <value>
                <fullName>Blood Management</fullName>
            </value>
            <value>
                <fullName>Bone Cement &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Bone Cement + Accessories</fullName>
            </value>
            <value>
                <fullName>Bone Drills and Bits</fullName>
            </value>
            <value>
                <fullName>Bone Substitutes</fullName>
            </value>
            <value>
                <fullName>Cable Products</fullName>
            </value>
            <value>
                <fullName>Chondrafix</fullName>
            </value>
            <value>
                <fullName>Compression Hip Screws</fullName>
            </value>
            <value>
                <fullName>Coonrad/Morrey Total Elbow</fullName>
            </value>
            <value>
                <fullName>DeNovo ET</fullName>
            </value>
            <value>
                <fullName>DeNovo NT</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>External Fixation</fullName>
            </value>
            <value>
                <fullName>Femoral Heads</fullName>
            </value>
            <value>
                <fullName>Femoral Implants</fullName>
            </value>
            <value>
                <fullName>Fracture Stems</fullName>
            </value>
            <value>
                <fullName>Gel-One</fullName>
            </value>
            <value>
                <fullName>Gender Solutions Natural-Knee Flex</fullName>
            </value>
            <value>
                <fullName>Gender Solutions PFJ</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Hip Instruments</fullName>
            </value>
            <value>
                <fullName>IM Nails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>