force-app/main/default/objects/Case/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROSA Knee</fullName>
            </value>
            <value>
                <fullName>ROSA Brain</fullName>
            </value>
            <value>
                <fullName>ROSA Spine</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Fluid Waste Management</fullName>
            </value>
            <value>
                <fullName>Omni Suite</fullName>
            </value>
            <value>
                <fullName>MCS</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Orthopedic</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>CMF/Thoracic/Robotics</fullName>
            </value>
            <value>
                <fullName>Joint/Trauma/Sports Med/Biologics/ETEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>