force-app/main/default/objects/Case/fields/PSI_Solution__c.field-meta.xml
<CustomField>
    <fullName>PSI_Solution__c</fullName>
    <label>CAS Conclusions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Catergory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Complaint - Forward to EtQ</fullName>
            </value>
            <value>
                <fullName>Delay scan</fullName>
            </value>
            <value>
                <fullName>Discrepancy in SMS</fullName>
            </value>
            <value>
                <fullName>DOB discrepancy</fullName>
            </value>
            <value>
                <fullName>Gender discrepancy</fullName>
            </value>
            <value>
                <fullName>Incomplete image uploaded</fullName>
            </value>
            <value>
                <fullName>Laterality Discrepancy</fullName>
            </value>
            <value>
                <fullName>Other (please describe)</fullName>
            </value>
            <value>
                <fullName>Patient name discrepancy</fullName>
            </value>
            <value>
                <fullName>Planning ready or to schedule</fullName>
            </value>
            <value>
                <fullName>Rejection=Existing implant</fullName>
            </value>
            <value>
                <fullName>Rejection=HITACHI scanner</fullName>
            </value>
            <value>
                <fullName>Rejection=HKA bigger than 15 degrees</fullName>
            </value>
            <value>
                <fullName>Rejection=Image quality</fullName>
            </value>
            <value>
                <fullName>Rejection=Incorrect acquisition</fullName>
            </value>
            <value>
                <fullName>Rejection = Lossy compression</fullName>
            </value>
            <value>
                <fullName>Rejection=Metal artifact</fullName>
            </value>
            <value>
                <fullName>Rejection=Motion artifact</fullName>
            </value>
            <value>
                <fullName>Rejection=Other (please describe below)</fullName>
            </value>
            <value>
                <fullName>Rejection=Protocol not followed</fullName>
            </value>
            <value>
                <fullName>Rejection=Rotated FOV</fullName>
            </value>
            <value>
                <fullName>Scan Qualification</fullName>
            </value>
            <value>
                <fullName>SMS New User</fullName>
            </value>
            <value>
                <fullName>SMS Password issues</fullName>
            </value>
            <value>
                <fullName>Surg input (IMAGE SITUATION)</fullName>
            </value>
            <value>
                <fullName>Surg input (JIG)</fullName>
            </value>
            <value>
                <fullName>Surg input (SEGMENTATION)</fullName>
            </value>
            <value>
                <fullName>Training  -  iAssist  -  Product Knowledge</fullName>
            </value>
            <value>
                <fullName>Training  -  Optical  -  Product Knowledge</fullName>
            </value>
            <value>
                <fullName>Training  -  PSI  -  Product Knowledge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>