force-app/main/default/objects/Case/fields/PSI_solution_desc__c.field-meta.xml
<CustomField>
    <fullName>PSI_solution_desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CAS Conclusion Description</label>
    <type>TextArea</type>
</CustomField>