force-app/main/default/objects/Case/fields/RECON_Team_Lead_1__c.field-meta.xml
<CustomField>
    <fullName>RECON_Team_Lead_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RECON Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>