force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brand/Marketing/Product Manager</fullName>
            </value>
            <value>
                <fullName>Capital Solutions Team</fullName>
            </value>
            <value>
                <fullName>Clinical Excellence Team</fullName>
            </value>
            <value>
                <fullName>Sales Support Team</fullName>
                <label>Connect Solution Center</label>
            </value>
            <value>
                <fullName>Executive Support</fullName>
            </value>
            <value>
                <fullName>GPO Group</fullName>
            </value>
            <value>
                <fullName>MarCom</fullName>
            </value>
            <value>
                <fullName>Regional Sales Director</fullName>
            </value>
            <value>
                <fullName>SFDC Request</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>