force-app/main/default/objects/Case/fields/Request_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_Detail__c</fullName>
    <label>Request Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal Review</fullName>
                <label>Structure Review</label>
            </value>
            <value>
                <fullName>Quote Approval</fullName>
            </value>
            <value>
                <fullName>Red Lines</fullName>
            </value>
            <value>
                <fullName>Facility Visit</fullName>
            </value>
            <value>
                <fullName>Product Support/Knowledge</fullName>
            </value>
            <value>
                <fullName>Inventory Status/Back Orders/Product Holds- Replacements or Substitutes</fullName>
            </value>
            <value>
                <fullName>CEU Education Training</fullName>
            </value>
            <value>
                <fullName>In-servicing</fullName>
            </value>
            <value>
                <fullName>Clinical Support</fullName>
            </value>
            <value>
                <fullName>Field Support for Product set-up after sale</fullName>
            </value>
            <value>
                <fullName>Demonstrations/Training</fullName>
            </value>
            <value>
                <fullName>End of Term Tracking</fullName>
            </value>
            <value>
                <fullName>Cross-reference (Account Support)</fullName>
            </value>
            <value>
                <fullName>Order In-put &amp; Tracking Information</fullName>
            </value>
            <value>
                <fullName>Opportunities Management</fullName>
            </value>
            <value>
                <fullName>Find Accounts</fullName>
            </value>
            <value>
                <fullName>Marketing Collateral</fullName>
            </value>
            <value>
                <fullName>Pricing information</fullName>
            </value>
            <value>
                <fullName>GPO/IDN Information</fullName>
            </value>
            <value>
                <fullName>Account Reporting</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Current Contract Status</fullName>
            </value>
            <value>
                <fullName>Document Deficiencies</fullName>
            </value>
            <value>
                <fullName>Cross-Sell Targets at GPO/IDN/Coalition Level</fullName>
            </value>
            <value>
                <fullName>Email Blast assistance</fullName>
            </value>
            <value>
                <fullName>Template building</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Quote/Deal Approval</fullName>
            </value>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>MyMobility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>