force-app/main/default/objects/Case/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access Request</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Alignment Support</fullName>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>Clear Cache</fullName>
            </value>
            <value>
                <fullName>Data Clean Up</fullName>
            </value>
            <value>
                <fullName>Enhancement Needed</fullName>
            </value>
            <value>
                <fullName>JAMS Alignment</fullName>
            </value>
            <value>
                <fullName>JAMS Approval</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Password Help</fullName>
            </value>
            <value>
                <fullName>System Glitch</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>