force-app/main/default/objects/Case/fields/Resources_Used__c.field-meta.xml
<CustomField>
    <fullName>Resources_Used__c</fullName>
    <label>Resources Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>