force-app/main/default/objects/Case/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <label>Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CMP</fullName>
            </value>
            <value>
                <fullName>IRA</fullName>
            </value>
            <value>
                <fullName>RGA</fullName>
            </value>
            <value>
                <fullName>RMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>