force-app/main/default/objects/Case/fields/RGA_Returned_Goods_Approval__c.field-meta.xml
<CustomField>
    <fullName>RGA_Returned_Goods_Approval__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RGA (Returned Goods Approval)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>