force-app/main/default/objects/Case/fields/RH_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>RH_Case_Reason__c</fullName>
    <label>RH Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Question: Coding</fullName>
            </value>
            <value>
                <fullName>Question: Coverage</fullName>
            </value>
            <value>
                <fullName>Question: Payment</fullName>
            </value>
            <value>
                <fullName>Question: Prior Authorization</fullName>
            </value>
            <value>
                <fullName>Question: Prior Authorization Denial</fullName>
            </value>
            <value>
                <fullName>Question: Claims Denial</fullName>
            </value>
            <value>
                <fullName>Question: General Reimbursement</fullName>
            </value>
            <value>
                <fullName>Request: Assist with Prior Authorization</fullName>
            </value>
            <value>
                <fullName>Request: Assist with Prior Auth Denial</fullName>
            </value>
            <value>
                <fullName>Request: Assist with Claims Denial</fullName>
            </value>
            <value>
                <fullName>Request: Medical Necessity Letter (PA)</fullName>
            </value>
            <value>
                <fullName>Request: Prior Auth Appeal Letter</fullName>
            </value>
            <value>
                <fullName>Request: Claims Appeal Letter</fullName>
            </value>
            <value>
                <fullName>Request: Coding Guide</fullName>
            </value>
            <value>
                <fullName>Request: Other</fullName>
            </value>
            <value>
                <fullName>Follow Up: Prior Auth/Pre-D Outcome</fullName>
            </value>
            <value>
                <fullName>Follow Up: Claims Payment</fullName>
            </value>
            <value>
                <fullName>Follow Up: PA Appeal Outcome</fullName>
            </value>
            <value>
                <fullName>Question: Claims Appeal</fullName>
            </value>
            <value>
                <fullName>Question: Insurance Verification</fullName>
            </value>
            <value>
                <fullName>Request: Clinical Data Request</fullName>
            </value>
            <value>
                <fullName>Request: Insurance Verification</fullName>
            </value>
            <value>
                <fullName>Request: Medical Necessity Letter</fullName>
            </value>
            <value>
                <fullName>Request: Prior Authorization Appeal Letter</fullName>
            </value>
            <value>
                <fullName>Request: Prior Authorization Letter</fullName>
            </value>
            <value>
                <fullName>Request: Reimbursement Kit</fullName>
            </value>
            <value>
                <fullName>Request: Site Visit</fullName>
            </value>
            <value>
                <fullName>Webcast</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Follow Up: Claims Appeal Outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>