force-app/main/default/objects/Case/fields/RH_Site_of_Service__c.field-meta.xml
<CustomField>
    <fullName>RH_Site_of_Service__c</fullName>
    <label>RH Site of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambulatory Surgery Center</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Hospital Inpatient</fullName>
            </value>
            <value>
                <fullName>Hospital Outpatient</fullName>
            </value>
            <value>
                <fullName>Physician Office Practice</fullName>
            </value>
            <value>
                <fullName>Imaging Center</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Diagnostic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>