force-app/main/default/objects/Case/fields/ROSA_Disposable_Volume__c.field-meta.xml
<CustomField>
    <fullName>ROSA_Disposable_Volume__c</fullName>
    <label>ROSA Disposable Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>