force-app/main/default/objects/Case/fields/Serial_number__c.field-meta.xml
<CustomField>
    <fullName>Serial_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Serial number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>