force-app/main/default/objects/Case/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <formula>IF( ISPICKVAL(SLA_Indicator__c, &quot;Violated&quot;),
IMAGE(&quot;https://zimmerbiometglobal--c.na8.visual.force.com/resource/1436186613000/missed&quot;, &quot;Violation&quot;),

IF(
ISPICKVAL(SLA_Indicator__c, &quot;Warning&quot;),
IMAGE(&quot;https://zimmerbiometglobal--c.na8.visual.force.com/resource/1436186462000/warning&quot;, &quot;Warning&quot;),
IMAGE(&quot;https://zimmerbiometglobal--c.na8.visual.force.com/resource/1433767918000/Checked&quot;, &quot;Normal&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <type>Text</type>
</CustomField>