force-app/main/default/objects/Case/fields/SLA_Indicator__c.field-meta.xml
<CustomField>
    <fullName>SLA_Indicator__c</fullName>
    <label>SLA Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Violated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>