force-app/main/default/objects/Case/fields/Sub_Catergory__c.field-meta.xml
<CustomField>
    <fullName>Sub_Catergory__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Android updates</fullName>
            </value>
            <value>
                <fullName>Apple Health Kit</fullName>
            </value>
            <value>
                <fullName>Apple Watch Stats</fullName>
            </value>
            <value>
                <fullName>App Store Audit</fullName>
            </value>
            <value>
                <fullName>Aprimo</fullName>
            </value>
            <value>
                <fullName>Asset Disposal Screening</fullName>
            </value>
            <value>
                <fullName>Base Station Install</fullName>
            </value>
            <value>
                <fullName>Base Station Issue</fullName>
            </value>
            <value>
                <fullName>Base Station Setup Appt Scheduled</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>BiometOS</fullName>
            </value>
            <value>
                <fullName>Bkr General Inq</fullName>
            </value>
            <value>
                <fullName>Bkr Inq - AD/CV</fullName>
            </value>
            <value>
                <fullName>Bkr Inq - Classification</fullName>
            </value>
            <value>
                <fullName>Bkr Inq COO</fullName>
            </value>
            <value>
                <fullName>Bkr Inq Currency</fullName>
            </value>
            <value>
                <fullName>Bkr Inq - High Duties</fullName>
            </value>
            <value>
                <fullName>Bkr Inq HTS/FDA</fullName>
            </value>
            <value>
                <fullName>Bkr Inq Missing/Illegible Docs</fullName>
            </value>
            <value>
                <fullName>Bkr Inq - Valuation</fullName>
            </value>
            <value>
                <fullName>Broken Base Station</fullName>
            </value>
            <value>
                <fullName>Broker Inquiries</fullName>
            </value>
            <value>
                <fullName>Broker Inquiries – Illegible/Missing Docs</fullName>
            </value>
            <value>
                <fullName>Broker Inquiries – IOR</fullName>
            </value>
            <value>
                <fullName>Broker Inquiries – Weights</fullName>
            </value>
            <value>
                <fullName>Broker SOP Inq/Updates</fullName>
            </value>
            <value>
                <fullName>BSST Issue</fullName>
            </value>
            <value>
                <fullName>Cancel Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>