force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Access Request</fullName>
            </value>
            <value>
                <fullName>Data Visibility Issue</fullName>
            </value>
            <value>
                <fullName>SFDC Mobile Functional Issue</fullName>
            </value>
            <value>
                <fullName>Grid Buddy Functional Issue</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Tableau Access</fullName>
            </value>
            <value>
                <fullName>Sales Reporting Issue</fullName>
            </value>
            <value>
                <fullName>JAMS Access</fullName>
            </value>
            <value>
                <fullName>JAMS Issue</fullName>
            </value>
            <value>
                <fullName>JTM Access</fullName>
            </value>
            <value>
                <fullName>Target Reporting Issue</fullName>
            </value>
            <value>
                <fullName>Salesforce Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Permission Set Update</fullName>
            </value>
            <value>
                <fullName>JAMS Approval</fullName>
            </value>
            <value>
                <fullName>Access Requests</fullName>
            </value>
            <value>
                <fullName>Alignment Support</fullName>
            </value>
            <value>
                <fullName>Functional Issue</fullName>
            </value>
            <value>
                <fullName>Training Request</fullName>
            </value>
            <value>
                <fullName>Data Visibility</fullName>
            </value>
            <value>
                <fullName>Sales Data Issue</fullName>
            </value>
            <value>
                <fullName>Field Support</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>ZB Cup Race</fullName>
            </value>
            <value>
                <fullName>Surgeon Hand Off</fullName>
            </value>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>Data Visibility – JAMS Alignment</fullName>
            </value>
            <value>
                <fullName>Data Visibility – Acct/Surgeon Missing</fullName>
            </value>
            <value>
                <fullName>Login Issues</fullName>
            </value>
            <value>
                <fullName>Clear Cache, Glitch, Browser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>